[gd_scene load_steps=12 format=3 uid="uid://ew0hxbsaa2qn"]

[ext_resource type="Script" path="res://systems/card_combat/enemy_player.gd" id="1_w2nxe"]
[ext_resource type="Texture2D" uid="uid://bgmo5mpcv3e3m" path="res://assets/ui/gameboard/corner_2.png" id="2_6cfi3"]
[ext_resource type="Script" path="res://systems/ui/tooltips/show_tooltip.gd" id="2_myi76"]
[ext_resource type="Texture2D" uid="uid://ca7vt6lror7v6" path="res://assets/ui/gameboard/karma.png" id="3_j5dsu"]
[ext_resource type="Theme" uid="uid://db7d7nr3s1th5" path="res://assets/ui/themes/font_theme.tres" id="4_bof7k"]
[ext_resource type="Texture2D" uid="uid://d0kr3ddbhudeu" path="res://assets/ui/gameboard/hb_4.png" id="6_7i4po"]
[ext_resource type="Texture2D" uid="uid://bbgh6tgr1fu1y" path="res://assets/ui/gameboard/hb_3.png" id="7_5448k"]
[ext_resource type="Texture2D" uid="uid://c6y4y66fpd27a" path="res://assets/ui/gameboard/heart_2.png" id="8_5a52r"]

[sub_resource type="Animation" id="Animation_yniok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(155, 143)]
}

[sub_resource type="Animation" id="Animation_put58"]
resource_name = "heartbeat"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(155, 143), Vector2(156, 144), Vector2(155, 143)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxy8i"]
_data = {
"RESET": SubResource("Animation_yniok"),
"heartbeat": SubResource("Animation_put58")
}

[node name="EnemyPlayer" type="ReferenceRect"]
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_w2nxe")

[node name="ResourceContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
mouse_filter = 2

[node name="CornerBackground" type="TextureRect" parent="ResourceContainer"]
layout_mode = 1
offset_left = 628.0
offset_top = 624.0
offset_right = 1256.0
offset_bottom = 1248.0
rotation = 3.14159
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("2_6cfi3")
flip_h = true
flip_v = true

[node name="Karma" type="TextureRect" parent="ResourceContainer"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 212.0
offset_bottom = 188.0
mouse_filter = 2
texture = ExtResource("3_j5dsu")

[node name="KarmaLabel" type="Label" parent="ResourceContainer/Karma"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -25.0
offset_right = 9.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_bof7k")
theme_override_colors/font_outline_color = Color(0.623529, 0.294118, 0.705882, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/Karma"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 25.0
offset_right = -29.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_myi76")
title = "Your Foes' Karma"
text = "Cards on their side of the boards will add their
combined cost to their karma total each turn.
Whenever their karma would go below zero the excess
amount is substracted from their health instead."
hover_min_duration = 0.2

[node name="Health" type="Control" parent="ResourceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="TextureProgressBar" parent="ResourceContainer/Health"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 540.0
offset_bottom = 540.0
mouse_filter = 2
value = 100.0
fill_mode = 5
texture_under = ExtResource("6_7i4po")
texture_progress = ExtResource("7_5448k")
radial_initial_angle = 332.0
radial_fill_degrees = 62.8
radial_center_offset = Vector2(270, 270)

[node name="HealthIcon" type="TextureRect" parent="ResourceContainer/Health"]
layout_mode = 0
offset_left = 296.0
offset_right = 451.0
offset_bottom = 143.0
mouse_filter = 2
texture = ExtResource("8_5a52r")

[node name="HealthLabel" type="Label" parent="ResourceContainer/Health/HealthIcon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -13.0
offset_right = 52.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_bof7k")
theme_override_colors/font_outline_color = Color(0.584314, 0.376471, 0.184314, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/Health/HealthIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_myi76")
title = "Your Foes' Health"
text = "Is lowered whenever one of your cards attacks an empty tile.
If it drops to zero you'll win!"
hover_min_duration = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResourceContainer/Health/HealthIcon"]
libraries = {
"": SubResource("AnimationLibrary_cxy8i")
}
autoplay = "heartbeat"

[connection signal="mouse_entered" from="ResourceContainer/Karma/ShowTooltip" to="ResourceContainer/Karma/ShowTooltip" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ResourceContainer/Karma/ShowTooltip" to="ResourceContainer/Karma/ShowTooltip" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ResourceContainer/Health/HealthIcon/ShowTooltip" to="ResourceContainer/Health/HealthIcon/ShowTooltip" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ResourceContainer/Health/HealthIcon/ShowTooltip" to="ResourceContainer/Health/HealthIcon/ShowTooltip" method="_on_mouse_exited"]
